# gbapy

./: .gitignore  EC12b All conditions.csv  EFM2_random_solutions.py  EGD Plotting.ipynb  GBApy showcase.ipynb  Gradient Ascent plots copie.ipynb  Gradient Ascent plots.ipynb  LICENSE  MANIFEST.in  MCMC Plotting.ipynb  MCMC_CLASSTEST.ipynb  MCMC_testing.ipynb  README.md  Trajectory Functions.py  Trajectory mu only.ipynb  Trajectory with noise Functions.py  Trajectory_Protein_negativity.ipynb  Values_at_Max C2.csv  Values_at_Max.csv  Values_at_MaxA1.csv  Values_at_MaxA2.csv  Values_at_MaxB1.csv  Values_at_MaxC2.csv  backup_tests.py  code_review_tests.ipynb  code_review_tests.py  convergence_tests.py  csv_to_binary.py  csv_to_gba.py  examples.ipynb  generate_full_column_rank_model.py  generate_toy_model.py  install.sh  install_GBApy.sh  install_test.sh  newextended16_evaluation.ipynb  noise_tests.ipynb  redump.sh  save_f0.py  save_optimum.py  (+8 more)
.github/: CODEOWNERS
binary_models/: A.gba  B.gba  C.gba  D.gba  EC12b.gba  EFM1.gba  EFM10.gba  EFM2.gba  EFM3.gba  EFM4.gba  EFM5.gba  EFM6.gba  EFM7.gba  EFM8.gba  EFM9.gba  FCR_EFM1.gba  FCR_EFM10.gba  FCR_EFM2.gba  FCR_EFM3.gba  FCR_EFM4.gba  FCR_EFM5.gba  M2.gba  NFCR_EFM1.gba  NFCR_EFM10.gba  NFCR_EFM2.gba  NFCR_EFM3.gba  NFCR_EFM4.gba  NFCR_EFM5.gba  newextended16.gba  newextended_M2.gba
deprecated/: GBA_algorithms.py  GBA_tol.py  MCMC_CLASS_Ver.py  MCMC_testing.ipynb  pyproject.toml
examples/: A.gba  A.ods  CMAES.ipynb  G14.ipynb  JCVISYN3A_v2.ipynb  basic_model_manipulations_tutorial.ipynb  gbacpp_binding_test.ipynb  (+8 more)
(+711 files in other folders)
