[project]
name = "GBApy"
version = "0.0.1"
authors = [
  { name="Charles Rocabert", email="author@example.com" },
  { name="Furkan Mert", email="author@example.com" },

]
description = "A package to simulate GBA_Evolution on models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/charlesrocabert/GBA_Evolution"
Issues = "https://github.com/charlesrocabert/GBA_Evolution/issues"